welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:35: error: Unit does not take parameters
    faireMotif()
              ^